# above_me

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  config.example.json  openapi.yml
.github/: dependabot.yml
.github/workflows/: cargo-audit.yml  cargo-test.yml  cargo.yml  docker-backend.yml  docker-frontend.yml  docker.yml  rust.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  haversine.rs  main.rs  ogn.rs  position.rs  time.rs
backend/src/api/: mod.rs  server.rs  state.rs
backend/src/api/routes/: aircraft.rs  overview.rs
backend/src/aprs/: client.rs  conversion.rs  mod.rs  status.rs
backend/src/ddb/: client.rs  conversion.rs  error.rs  mod.rs
backend/src/ogn/: aircraft.rs  mod.rs
backend/src/ogn/aprs/: client.rs  conversion.rs  status.rs
backend/src/ogn/ddb/: client.rs  conversion.rs
docker/: .env.example  docker-compose.yml  nginx.conf
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: index.html  main.js  privacy-policy.html  style.css  table.handlebars
src/: aprs.rs  client.rs  config.rs  main.rs  mutex.rs  server.rs  time.rs
src/api/: handler.rs  mod.rs  router.rs  server.rs  state.rs
src/aprs/: client.rs  conversion.rs  mod.rs  status.rs
src/ddb/: client.rs  error.rs  mod.rs
