[package]
name = "above_me"
version = "0.1.3"
edition = "2021"
authors = ["Niklas 'Curly' Schmidt <36010519+neon-JS@users.noreply.github.com>"]
description = "This project contains the backend for above_me, a service that lets you see what aircraft are currently flying above you."
readme = "../README.md"
repository = "https://github.com/neon-JS/above_me"
license = "MIT"
keywords = ["ogn", "openglidernet", "open-glider-net", "aircraft", "glider"]
exclude = ["Dockerfile", "target/"]

[dependencies]
axum = "0.7.5"
config = "0.14.0"
once_cell = "1.19.0"
regex = { version = "1.10.5", features = ["std"] }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11.3"

[profile.release]
strip = true
