[package]
name = "above_me"
version = "0.1.4"
edition = "2021"
authors = ["Laika Schmidt <36010519+its-laika@users.noreply.github.com>"]
description = "This project contains the backend for above_me, a service that lets you see what aircraft are currently flying above you."
readme = "../README.md"
repository = "https://github.com/its-laika/above_me"
license = "MIT"
keywords = ["ogn", "openglidernet", "open-glider-net", "aircraft", "glider"]
exclude = ["Dockerfile", "target/"]

[dependencies]
axum = "0.8.1"
config = "0.15.7"
regex = { version = "1.11.1", features = ["std"] }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
laika = { version = "0.1.4", features = ["shotgun"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11.6"

[profile.release]
strip = true
